--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html">RLJrHighSchool</a></h1>
+      <!-- <h1 class="logo me-auto"><a href="index.html">RLJrHighSchool</a></h1> -->
+      <img src="assets/img/logo.jpg" width="120" height="80">
+
+      <!-- img src="assets/img/about.jpg -->
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
